[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmc-easy-vitpose"
version = "0.1.0"
description = "Fork of easy_ViTPose with opinionated packaging for FreeMoCap workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache" }
authors = [{ name = "Aaron Cherian" }]

dependencies = [
  "numpy>=1.23",
  "opencv-contrib-python",
  "pillow>=9",
  "tqdm",
  "ultralytics>=8.0",
  "filterpy",
  "scipy",
  "scikit-image",
  "huggingface-hub"
]


[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pytest",
]


[tool.setuptools.packages.find]
include = ["easy_ViTPose", "easy_ViTPose.*"]

[tool.ruff]
line-length = 100
